Fixed logo height issue on smaller screens.

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -45,6 +45,7 @@
     
     .logo {
         width: 110px;
+        height: 100%;
     }
     
     .logo-img {
@@ -392,6 +393,7 @@
     
     .logo {
         width: 110px;
+        height: 100%;
     }
     
     .logo-img {
@@ -748,6 +750,7 @@
     
     .logo {
         width: 110px;
+        height: 100%;
     }
     
     .logo-img {
@@ -1102,6 +1105,7 @@
     
     .logo {
         width: 100px;
+        height: 100%;
     }
     
     .logo-img {
